# PeMa_Test

./: .gitignore  CMakeLists.txt  PeMa.command  README.md  SportCal.command
api/: main.py  pema.db  requirements.txt
build-codex/: ALL_BUILD.vcxproj  CMakeCache.txt  PeMa.sln  PeMa.vcxproj  PeMa.vcxproj.filters  PeMa_qmlimportscan.vcxproj  PeMa_qmlimportscan.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
build-codex/.qt/: QtDeploySupport-Debug.cmake  QtDeploySupport-MinSizeRel.cmake  QtDeploySupport-RelWithDebInfo.cmake  QtDeploySupport-Release.cmake  QtDeployTargets-Debug.cmake  QtDeployTargets-MinSizeRel.cmake  QtDeployTargets-RelWithDebInfo.cmake  QtDeployTargets-Release.cmake
build-codex/.qt/deploy_qml_imports/: PeMa-Debug.cmake
build-codex/.qt/qml_imports/: PeMa_conf.cmake
build-codex/PeMa.dir/Debug/: PeMa.exe.recipe  PeMa.ilk
build-local/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  QtCalendarApp.sln  QtCalendarApp.vcxproj  QtCalendarApp.vcxproj.filters  QtCalendarApp_qmlimportscan.vcxproj  QtCalendarApp_qmlimportscan.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
build-local/.qt/: QtDeploySupport-Debug.cmake  QtDeploySupport-MinSizeRel.cmake  QtDeploySupport-RelWithDebInfo.cmake  QtDeploySupport-Release.cmake  QtDeployTargets-Debug.cmake  QtDeployTargets-MinSizeRel.cmake  QtDeployTargets-RelWithDebInfo.cmake  QtDeployTargets-Release.cmake
resources/: resources.qrc
src/app/: main.cpp
src/backend/: WorkoutStore.cpp  WorkoutStore.h
web/: index.html
(+71 files in other folders)
